# kocmoc-demo

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README  README.rst
art/apollo-saturn/: apollo-saturn.blend  apollo-saturn.blend1  apollo-saturn.blend2  apollo-saturn.blend3  apollo-saturn.blend4  creases.psd  kocmoc_decal.psd  spce_bolts.psd
art/title/: kocmoc.ai  title.psd
doc/atmospheric_scattering/: .gitignore  atmospheric_scattering.tex  literature.bib
doc/engine_lu/: .gitignore  engine_lu_doc.tex
doc/engine_lu/plot/: compile-time-plot.tex  plot_compile_time.gpl
engine_lu_doc/: engine_lu_doc.tex
engine_lu_doc/plot/: frame-time-plot.tex  plot_compile_time.gpl  plot_frame_time.gpl
media/: kocmoc.properties.in
media/extras/matlab/: createColorLUT.m
media/models/: cube.dae  kocmoc.dae  multi.dae  object_normal.dae  sky.dae  suzanne-tris.dae  test.dae  texture_test.dae  torus.dae  triangle.dae  tris.dae
media/scripts/: .goutputstream-GC8FPV  .goutputstream-NCJDPV  kocmoc.anim
media/shader/: minimal.vert
media/shaders/: base.frag  base.vert  gizmo.frag  gizmo.vert  luminance.glsl  minimal.frag  overlay.frag  overlay.vert  post.frag  post.vert  scattering.glsl  shadow.frag  shadow.vert  sky.frag  sky.vert  stars.frag  textured.frag  textured.vert  vertexColor.frag  vertexColor.vert
src/: AnimationClock.cpp  AnimationClock.hpp  AnimationSystem.cpp  AnimationSystem.hpp  AudioPlayer.cpp  AudioPlayer.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Clock.cpp  Clock.hpp  ConfigFileParser.cpp  ConfigFileParser.hpp  Context.cpp  Context.hpp  Exception.cpp  Exception.hpp  FilmCamera.cpp  FilmCamera.hpp  FrameBuffer.cpp  FrameBuffer.hpp  Gamepad.cpp  Gamepad.hpp  ImageLoader.cpp  ImageLoader.hpp  ImageOverlay.cpp  ImageOverlay.hpp  Kocmoc.cpp  Kocmoc.hpp  KocmocColladaErrorHandler.cpp  KocmocColladaErrorHandler.hpp  KocmocColladaImporter.cpp  KocmocColladaImporter.hpp  KocmocLoader.cpp  KocmocLoader.hpp  KocmocScene.cpp  KocmocScene.hpp  Loader.cpp  Loader.hpp  MissionControlClient.cpp  (+38 more)
src/audio/: OggStream.cpp  OggStream.hpp  Player.cpp  Player.hpp
src/camera/: Camera.cpp  Camera.hpp  FilmCamera.cpp  FilmCamera.hpp  OrthoCamera.cpp  OrthoCamera.hpp  OverlayCamera.cpp  OverlayCamera.hpp
src/input/: Gamepad.cpp  Gamepad.hpp
src/loader/: ImageLoader.cpp  ImageLoader.hpp  SceneLoader.cpp  SceneLoader.hpp
src/loader/collada/: ErrorHandler.cpp  ErrorHandler.hpp  Importer.cpp  Importer.hpp
src/missionControl/: Client.cpp  Client.hpp
src/renderer/: FrameBuffer.cpp  FrameBuffer.hpp  RenderMesh.cpp  RenderMesh.hpp  Shader.cpp  Shader.hpp  ShaderManager.cpp  ShaderManager.hpp  ShadowMap.cpp  ShadowMap.hpp
src/scene/: ImageOverlay.cpp  ImageOverlay.hpp  LineGizmo.cpp  LineGizmo.hpp  Octree.cpp  Octree.hpp  OctreeNode.cpp  OctreeNode.hpp  PolyMesh.cpp  PolyMesh.hpp  PolyMeshNode.cpp  PolyMeshNode.hpp  RenderMeshNode.cpp  RenderMeshNode.hpp  Scene.cpp  Scene.hpp  SceneNode.cpp  SceneNode.hpp  Texture.hpp  meshUtils.cpp  meshUtils.hpp
src/time/: AnimationClock.cpp  AnimationClock.hpp  AnimationSystem.cpp  AnimationSystem.hpp  Clock.cpp  Clock.hpp  Timer.cpp  Timer.hpp
src/util/: PropertiesFileParser.cpp  PropertiesFileParser.hpp  Property.cpp  Property.hpp  util.cpp  util.hpp
test/: CMakeLists.txt
test/src/: dummy.cpp  octreeTest.cpp  symbolTest.cpp
